--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_discrete)
 importFrom(ggplot2,scale_fill_discrete)
+importFrom(glmnet,cv.glmnet)
 importFrom(pscl,zeroinfl)
